[project]
name = "tail_tiles"
version = "0.1.0"
description = "Multi-tile tail viewer for terminal"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Fabio Ferreira" }]
keywords = ["tail", "terminal", "curses", "log", "viewer"]
classifiers = [
    "Environment :: Console :: Curses",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
tail-tiles = "tail_tiles:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
